[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/resources/Themes.tres" type="Theme" id=1]
[ext_resource path="res://src/utilities/InputText.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/resources/fonts/Helvetica.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/calendar_button/scripts/calendar_script.gd" type="Script" id=4]
[ext_resource path="res://src/utilities/Date_Selector_2.gd" type="Script" id=5]
[ext_resource path="res://addons/calendar_button/btn_img/btn_32x32_02.png" type="Texture" id=6]
[ext_resource path="res://addons/calendar_button/btn_img/btn_32x32_01.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 3 )

[node name="Date_selector_2" type="HBoxContainer"]
anchor_left = 0.082
anchor_right = 0.082
margin_left = -83.968
margin_right = 72.032
margin_bottom = 92.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 120.0
margin_bottom = 92.0
theme = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 120.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 4.0
margin_right = 36.0
margin_bottom = 23.0
rect_min_size = Vector2( 36, 0 )
custom_fonts/font = SubResource( 1 )
text = "Dia"

[node name="InputDay" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_left = 36.0
margin_right = 120.0
type = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 120.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 4.0
margin_right = 36.0
margin_bottom = 23.0
rect_min_size = Vector2( 36, 0 )
custom_fonts/font = SubResource( 1 )
text = "MÃªs"

[node name="InputMonth" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_left = 36.0
margin_right = 120.0
type = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 120.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_top = 4.0
margin_right = 36.0
margin_bottom = 23.0
rect_min_size = Vector2( 36, 0 )
custom_fonts/font = SubResource( 1 )
text = "Ano"

[node name="InputYear" parent="VBoxContainer/HBoxContainer3" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_left = 36.0
margin_right = 120.0
type = 1

[node name="CalendarButton" type="TextureButton" parent="."]
margin_left = 124.0
margin_right = 156.0
margin_bottom = 92.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
stretch_mode = 4
script = ExtResource( 4 )

[connection signal="date_selected" from="CalendarButton" to="." method="_on_CalendarButton_date_selected"]
